--- a/rs/templates/common_wrapper.html
+++ b/rs/templates/common_wrapper.html
@@ -100,7 +100,19 @@
     {% include "user_main_helpers/import_main_css_and_js.html" %}
     
     <!-- Google Analytics -->
-    {% include "analytics.html" %}
+
+    <script type="text/javascript">
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', '{{ analytics_id }}']);
+        //_gaq.push(['_trackPageview']); -- moved into main_container - to work with ajax loaded pages
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+    </script>
+
 
 </head>
 
