--- a/rs/templates/login_helpers/login_errors.html
+++ b/rs/templates/login_helpers/login_errors.html
@@ -26,7 +26,7 @@
 ################################################################################
 -->
 {% if errors %}
-    {% ifequal build_name "RomanceSecreto" %}
+    {% ifequal build_name "Discrete" %}
         <p>&nbsp;</p>
         <p>&nbsp;</p>
         <p>&nbsp;</p>
