Fixed error in google ads that was causing the text of the javascript to be displayed instead of executing the javascript.

--- a/rs/templates/advertising/publisher/google_160x600.html
+++ b/rs/templates/advertising/publisher/google_160x600.html
@@ -15,7 +15,7 @@
         }
         </script>
 
-        {{ google_ad_160x600 }}
+        {{ google_ad_160x600|safe }}
         
     {% endif %}
 {% endif %}
