Added javascript snippet that is required for tracking adsense information inside google analytics.

--- a/rs/templates/common_helpers/analytics.html
+++ b/rs/templates/common_helpers/analytics.html
@@ -1,4 +1,11 @@
-    <!-- Google Analytics -->
+<!-- Link Analytics to Adsense -->
+<script type="text/javascript">
+window.google_analytics_uacct = "{{ analytics_id }}";
+</script>
+
+
+<!-- Google Analytics -->
+
 
     <script type="text/javascript">
         var _gaq = _gaq || [];
