Added Ashley Madison advertising to RomanceSecreto (Discrete) build

--- a/rs/templates/advertising/horizontal_ad.html
+++ b/rs/templates/advertising/horizontal_ad.html
@@ -33,8 +33,13 @@
     <div class="cl-clear"></div>
 
     <div id="id-horizontal-ad" class="grid_custom cl-grid_760px alpha omega cl-center-text">
-
+        
+    {% if advertising_info.enable_google_ads %}
         {% include 'advertising/publisher/google_728x90.html' %}
+    {% endif %}
+    {% if advertising_info.enable_ashley_madison_ads %}
+        {{ advertising_info.ashley_madison_bottom_banner_ad|safe }}
+    {% endif %}
 
     </div>
 {% else %}
