--- a/rs/templates/advertising/sidebar.html
+++ b/rs/templates/advertising/sidebar.html
@@ -30,17 +30,25 @@
 
     <br><br>
     {% if advertising_info.enable_google_ads %}
-
         {% include 'advertising/publisher/google_160x600.html' %}
-        {% include 'advertising/publisher/google_160x600.html' %}
-
     {% endif %}
-
+    
     {% if advertising_info.enable_ashley_madison_ads %}
-
         <!-- ashley madison advertisements are enabled -->
-        {{ advertising_info.ashley_madison_sidebar_ad|safe }}
-
+        {{ advertising_info.ashley_madison_sidebar_ad1|safe }}
+    {% endif %}
+    <br><br>
+    {% for ad in advertising_info.ad_template_list %}
+        {% include ad %}
+    {% endfor %}
+    <br><br>
+    {% if advertising_info.enable_google_ads %}
+        {% include 'advertising/publisher/google_160x600.html' %}
+    {% endif %}
+        
+    {% if advertising_info.enable_ashley_madison_ads %}
+        <!-- ashley madison advertisements are enabled -->
+        {{ advertising_info.ashley_madison_sidebar_ad1|safe }}
     {% endif %}
     
     <br><br>    
@@ -51,11 +59,6 @@
     {% endif %}
 
     <div class="cl-clear"></div>
-
-
-    {% for ad in advertising_info.ad_template_list %}
-        {% include ad %}
-    {% endfor %}
 
 </div>
 {% else %}
