--- a/rs/templates/user_main_helpers/chat.html
+++ b/rs/templates/user_main_helpers/chat.html
@@ -37,8 +37,8 @@
 
 <div id="id-session-closed-dialog" title="Warning" style="display: none; ">
     <p>
-    {% blocktrans with build_name as build_name%}
-        Your session has closed - you must re-login to continue to use {{ build_name }}.
+    {% blocktrans with app_name as app_name%}
+        Your session has closed - you must re-login to continue to use {{ app_name }}.
     {% endblocktrans %}
     </p>
 </div>
