--- a/rs/templates/user_main_helpers/simple_search_form.html
+++ b/rs/templates/user_main_helpers/simple_search_form.html
@@ -37,7 +37,7 @@
         </tbody>
     </table>
     <br>
-    <a id="id-search-by-name-link" href='#'>{% trans "Search by name" %}</a>&nbsp;&nbsp;&nbsp;&nbsp;
+    <a id="id-search-by-name-link" href='#'>{% trans "Search By Name" %}</a>&nbsp;&nbsp;&nbsp;&nbsp;
 </form>
 </div>
 
@@ -49,7 +49,7 @@
         {{ search_bar.search_by_name_td_items|safe }}
         </tbody>
     </table>
-    <a id="id-simple-search-link" href = '#'>{% trans "Standard search" %}</a>&nbsp;&nbsp;&nbsp;&nbsp;
+    <a id="id-simple-search-link" href = '#'>{% trans "Standard Search" %}</a>&nbsp;&nbsp;&nbsp;&nbsp;
 </form>
 </div>
 
