--- a/rs/templates/user_main_helpers/search_inline_javascript.html
+++ b/rs/templates/user_main_helpers/search_inline_javascript.html
@@ -35,11 +35,11 @@
         // search any further. For example, if the region_default_text value is selected, then all
         // regions in the selected country will be shown.
         var default_text = new Object();
-        default_text['region'] = '{% trans "All regions" %}';
-        default_text['sub_region'] = '{% trans "All sub-regions" %}';
-        default_text['for_sale_sub_menu'] = '{% trans "Show all" %}';
-        default_text['to_buy_sub_menu'] = '{% trans "Show all" %}';
-        default_text['not_available'] = '{% trans "Not defined yet" %}';
+        default_text['region'] = '{% trans "All Regions" %}';
+        default_text['sub_region'] = '{% trans "All Sub-Regions" %}';
+        default_text['for_sale_sub_menu'] = '{% trans "Show All" %}';
+        default_text['to_buy_sub_menu'] = '{% trans "Show All" %}';
+        default_text['not_available'] = '{% trans "Not Defined Yet" %}';
 
         var id_prefix = "#id-search";
 
