--- a/rs/templates/user_main_helpers/navigation_buttons.html
+++ b/rs/templates/user_main_helpers/navigation_buttons.html
@@ -39,8 +39,8 @@
                 </td>
 
                 <td class="cl-nav-td cl-nav-item"><a
-                    href="{% url edit_profile_url display_id=primary_user_presentation_data_fields.owner_id %}"
-                        rel="address:{% url edit_profile_url display_id=primary_user_presentation_data_fields.owner_id %}">
+                    href="{% url edit_profile_url display_nid=primary_user_presentation_data_fields.owner_nid %}"
+                        rel="address:{% url edit_profile_url display_nid=primary_user_presentation_data_fields.owner_nid %}">
                 {% trans "My Profile" %}</a></td>
 
 
