Changed default payment option

--- a/rs/templates/user_main_helpers/paypal_donate_buttons.html
+++ b/rs/templates/user_main_helpers/paypal_donate_buttons.html
@@ -111,11 +111,11 @@
                     <table>
                         <tr><td><input type="hidden" name="on0" value="VIP"></td>
                         <td class="cl-paypal-td"><select name="os0">
-                        <option value="50 Euros">€50.00 - 1 year</option>
+                        <option selected value="50 Euros">€50.00 - 1 year</option>
                         <option value="40 Euros">€40.00 - 9 months</option>
                         <option value="30 Euros">€30.00 - 6 months</option>
                         <option value="20 Euros">€20.00 - 3 months</option>
-                        <option selected value="10 Euros">€10.00 - 1 month</option>
+                        <option value="10 Euros">€10.00 - 1 month</option>
 
                         <!--<option value="0.5 Euros - Test">0.5 Euros - Test €0.50 EUR</option>-->
                     </select> </td>
@@ -145,11 +145,11 @@
                     <tr><td>
                         <tr><td><input type="hidden" name="on0" value="VIP"></td>
                         <td class="cl-paypal-td"><select name="os0">
-                        <option value="50 Euros">€50.00 - 1 año</option>
+                        <option selected value="50 Euros">€50.00 - 1 año</option>
                         <option value="40 Euros">€40.00 - 9 meses</option>
                         <option value="30 Euros">€30.00 - 6 meses</option>
                         <option value="20 Euros">€20.00 - 3 meses</option>
-                        <option selected value="10 Euros">€10.00 - 1 mes</option>
+                        <option value="10 Euros">€10.00 - 1 mes</option>
                         <!--<option value="0.5 Euros">0.5 Euros€0.50 EUR</option>-->
 
                     </select> </td>
