Highlight the "Enter as a guest" link on the login page

--- a/rs/templates/login.html
+++ b/rs/templates/login.html
@@ -99,7 +99,11 @@
             }
         });
 
-
+        // Fade in the text that invites guest uers to look around
+        $("#id-enter_href").addClass('cl-login-text');
+        $("#id-enter_href").removeClass('cl-login-text', 3000)
+        $("#id-enter_href").addClass('cl-login-text', 3000);
+        $("#id-enter_href").removeClass('cl-login-text', 6000)
     });
 
 </script>
@@ -224,11 +228,13 @@
             {% endif %}
 
             <br><br>
-            {% trans "Do you want to look around before registering?" %} <br>
+            {% trans "Do you want to look around before registering?" %}<br>
 
-            <a href="{% url search_gen %}?query_order=unique_last_login"
+            <a  href="{% url search_gen %}?query_order=unique_last_login"
                rel="address:{% url search_gen %}?query_order=unique_last_login">
-                {% trans "Enter with a guest account" %}</a>
+                <span id="id-enter_href" >
+                {% trans "Enter with a guest account" %}</span>
+            </a>
             <br><br>
 
             {% trans "Free" %} - {% trans "Live chat and messages included" %}<br>
