--- a/rs/templates/user_main_helpers/chat.html
+++ b/rs/templates/user_main_helpers/chat.html
@@ -44,12 +44,12 @@
 </div>
 
 
-<div id="id-go-offline-chat-button-text" style="display:none;">
-    {% trans "Go offline" %}
+<div id="id-disactivate-chat-button-text" style="display:none;">
+    {% trans "Close chat" %}
 </div>
 
-<div id="id-go-online-chat-button-text" style="display:none;">
-    {% trans "Go online" %}
+<div id="id-activate-chat-button-text" style="display:none;">
+    {% trans "Open chat" %}
 </div>
 
 
@@ -78,7 +78,7 @@
     {% trans "(Away)" %}
 </div>
 
-<div id="id-chat-contact-main-box-offline-text" style="display:none;">
+<div id="id-chat-contact-main-box-disactivated-text" style="display:none;">
     {% trans "You are currently offline. You must go online to see your contacts." %}
 </div>
 
