--- a/rs/templates/user_main_helpers/import_main_css_and_js.html
+++ b/rs/templates/user_main_helpers/import_main_css_and_js.html
@@ -93,10 +93,10 @@
     <script type="text/javascript" src="/{{ live_static_dir }}/js/jquery.fancybox-1.3.4.js"></script>
     <script type="text/javascript" src="/{{ live_static_dir }}/js/jquery.address-1.5.js"></script>
     <script type="text/javascript" src="/{{ live_static_dir }}/js/ajax-address-handler.js"></script>
-    <!-- Note: we use jquery.form for submitting photos -->
     <script type="text/javascript" src="/{{ live_static_dir }}/js/jquery.form.js"></script>
     <script type="text/javascript" src="/{{ live_static_dir }}/js/jquery.ui.chatbox.js"></script>
     <script type="text/javascript" src="/{{ live_static_dir }}/js/channel-utils.js"></script>
+    <script type="text/javascript" src="/{{ live_static_dir }}/js/online-presence.js"></script>
 
     <script type="text/javascript" src="/{{ live_static_dir }}/js/chat.js"></script>
 
