--- a/rs/templates/user_main_helpers/paypal_donate_buttons.html
+++ b/rs/templates/user_main_helpers/paypal_donate_buttons.html
@@ -72,7 +72,7 @@
 
                 Warning - sandbox code enabled<br>
 
-                    <form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post">
+                    <form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" target="_blank">
 
                         <input type="hidden" name="notify_url" value="http://{{ request.META.HTTP_HOST }}/paypal/ipn/">
                         <input type="hidden" name="custom" value="{{ primary_user_presentation_data_fields.owner_uid }}">
@@ -101,7 +101,7 @@
             {% if guest_user_data_fields.language == "en" %}
 
 
-                <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
 
                     <input type="hidden" name="notify_url" value="http://{{ request.META.HTTP_HOST }}/paypal/ipn/">
                     <input type="hidden" name="custom" value="{{ primary_user_presentation_data_fields.owner_uid }}">
@@ -134,7 +134,7 @@
 
             {% if guest_user_data_fields.language == "es" %}
 
-                <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
 
                     <input type="hidden" name="notify_url" value="http://{{ request.META.HTTP_HOST }}/paypal/ipn/">
                     <input type="hidden" name="custom" value="{{ primary_user_presentation_data_fields.owner_uid }}">
