Fixed javascript and html warnings

--- a/rs/templates/common_helpers/logo_banner.html
+++ b/rs/templates/common_helpers/logo_banner.html
@@ -79,7 +79,7 @@
                         {% ifnotequal general_information_data_fields.link_to_hide "login" %}
                             <td class="cl-info-td"><img src="/{{ live_static_dir }}/img/info_divider.png"
                                                         align="middle" alt=""></td>
-                            <td class="cl-info-td cl-info-100px-width-td" align="middle"><a href="/">
+                            <td class="cl-info-td cl-info-100px-width-td" align="center"><a href="/">
                                 {% trans "Register / Enter" %}</a></td>
                         {% endifnotequal %}
                     {% endif %}
