--- a/rs/templates/login_helpers/right_login_table.html
+++ b/rs/templates/login_helpers/right_login_table.html
@@ -105,7 +105,7 @@
                         {{ html_for_signup|safe }}
                         <tr>
                             <td></td>
-                            <td><input type="submit" value='{% trans " Register me" %}!'/>
+                            <td><input type="submit" value='{% trans " Register me" %}!'>
                             </td>
                         </tr>
                         <!-- force space below the login options -->
