--- a/rs/templates/common_helpers/analytics.html
+++ b/rs/templates/common_helpers/analytics.html
@@ -17,4 +17,5 @@ window.google_analytics_uacct = "{{ analytics_id }}";
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
 
+    /* analytics */
     </script>
