--- a/rs/templates/user_main_helpers/chat.html
+++ b/rs/templates/user_main_helpers/chat.html
@@ -120,7 +120,7 @@
         {% trans "Please enter the group name to create and join:" %}
         <br><br>
         <form id="id-create_new_group-form" method="POST">
-        <input type="create_new_group" maxlength="16" name="create_new_group_name"
+        <input type="text" maxlength="16" name="create_new_group_name"
                id="id-create-new-group-input" class="cl-standard-textinput-width-px"><br>
 
         <table> <tbody><tr>
