--- a/rs/templates/user_main_helpers/chat.html
+++ b/rs/templates/user_main_helpers/chat.html
@@ -124,7 +124,7 @@
                id="id-create-new-group-input" class="cl-standard-textinput-width-px"><br>
 
         <table> <tbody><tr>
-              <td><input type="button" value='{% trans "Create a group" %}' id="id-submit-create_new_group" class="cl-submit" style="color: white;"></td>
+              <td><input type="button" value='{% trans "Create a group" %}' id="id-submit-create_new_group" class="cl-submit"></td>
         </tr> </tbody></table>
         </form>
     </div>
