--- a/rs/templates/user_main_helpers/paypal_donate_buttons.html
+++ b/rs/templates/user_main_helpers/paypal_donate_buttons.html
@@ -42,8 +42,10 @@
         <ul>
         <li>{% blocktrans with num_messages_for_free_clients as free and num_messages_for_vip_clients as vip %}
                 vip_message_quota {{ vip }} {{ free }}{% endblocktrans %}</li>
+        <li>{% blocktrans with app_name as app_name %}Online status benefits {{ app_name }}{% endblocktrans %}</li>
         <li>{% blocktrans with num_chat_friends_for_free_clients as free and  num_chat_friends_for_vip_clients as vip%}
                 vip_chat_friends {{ vip }} {{ free }}{% endblocktrans %}</li>
+
         </ul>
         </p>
     </div>
