Modified presence code so that if an "expired session" is reported from the server, the client will stop polling. Additionally, the logout screen has had it's chatboxes removed.

--- a/rs/templates/user_main_helpers/presence_and_chat.html
+++ b/rs/templates/user_main_helpers/presence_and_chat.html
@@ -47,6 +47,10 @@
         return obj;
     }();
 
+    if ("{{primary_user_presentation_data_fields.remove_chatboxes }}" === "yes") {
+        // some pages should have the chatboxes removed - such as the logout screen
+        remove_chatboxes = true;
+    }
 
 </script>
 
