Updated message shown when the chatbox is closed. Also, removed a bunch of commented-out lines from the django.po files

--- a/rs/templates/user_main_helpers/chat.html
+++ b/rs/templates/user_main_helpers/chat.html
@@ -75,7 +75,7 @@
 </div>
 
 <div id="id-chat-contact-main-box-disactivated-text" style="display:none;">
-    {% trans "You are currently offline. You must go online to see your contacts." %}
+    {% trans "Your chat is currently closed. You must open it to see your contacts." %}
 </div>
 
 
