--- a/rs/templates/user_main_helpers/paypal_donate_buttons.html
+++ b/rs/templates/user_main_helpers/paypal_donate_buttons.html
@@ -39,15 +39,8 @@
         <p>
 
         {% blocktrans %}VIP benefits include{% endblocktrans %}:
-        <ul>
-        <li>{% blocktrans with num_messages_for_free_clients as free and num_messages_for_vip_clients as vip %}
-                vip_message_quota {{ vip }} {{ free }}{% endblocktrans %}</li>
-        <li>{% blocktrans with app_name as app_name %}Online status benefits {{ app_name }}{% endblocktrans %}</li>
-        <li>{% blocktrans with num_chat_friends_for_free_clients as free and  num_chat_friends_for_vip_clients as vip%}
-                vip_chat_friends {{ vip }} {{ free }}{% endblocktrans %}</li>
-        <li>{% blocktrans %}You can update your email address{% endblocktrans %}</li>
 
-        </ul>
+        {% include "user_main_helpers/vip_benefits.html" %}        
         </p>
     </div>
 
