Re-named jquery.ui.chatbox[.css| .js] to simply chatbox[.css | .js]

--- a/rs/templates/user_main_helpers/import_main_css_and_js.html
+++ b/rs/templates/user_main_helpers/import_main_css_and_js.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="/{{ live_static_dir }}/css/text.css">
     <link rel="stylesheet" href="/{{ live_static_dir }}/css/960.css">
     <link rel="stylesheet" href="/{{ live_static_dir }}/css/jquery-ui-1.9.2.{{ build_name }}.css">
-    <link rel="stylesheet" href="/{{ live_static_dir }}/css/jquery.ui.chatbox.css">
+    <link rel="stylesheet" href="/{{ live_static_dir }}/css/chatbox.css">
 
     <link rel="stylesheet" href="/{{ live_static_dir }}/css/site_common.css">
     <link rel="stylesheet" href="/{{ live_static_dir }}/css/user_main.css">
@@ -94,7 +94,7 @@
     <script type="text/javascript" src="/{{ live_static_dir }}/js/jquery.address-1.5.js"></script>
     <script type="text/javascript" src="/{{ live_static_dir }}/js/ajax-address-handler.js"></script>
     <script type="text/javascript" src="/{{ live_static_dir }}/js/jquery.form.js"></script>
-    <script type="text/javascript" src="/{{ live_static_dir }}/js/jquery.ui.chatbox.js"></script>
+    <script type="text/javascript" src="/{{ live_static_dir }}/js/chatbox.js"></script>
     <script type="text/javascript" src="/{{ live_static_dir }}/js/channel-utils.js"></script>
     <script type="text/javascript" src="/{{ live_static_dir }}/js/chat.js"></script>
 
