--- a/rs/templates/user_main_helpers/import_main_css_and_js.html
+++ b/rs/templates/user_main_helpers/import_main_css_and_js.html
@@ -39,6 +39,8 @@
 
     {% if proprietary_static_dir_exists %}
         <link rel="stylesheet" href="/{{ live_proprietary_static_dir }}/css/{{ build_name }}_common.css">
+        <link rel="stylesheet" href="/{{ live_proprietary_static_dir }}/css/proprietary_common.css">
+
     {% else %}
         <link rel="stylesheet" href="/{{ live_static_dir }}/css/default_common.css">
     {% endif %}
